# CBProjectExporter

./: .gitignore  AutotoolsExporter.cpp  BakefileExporter.cpp  BakefileExporter.h  ExporterBase.cpp  ExporterBase.h  Makefile.am  PremakeDlg.cpp  PremakeDlg.xrc  PremakeExporter.cpp  ProjectExporter.cbp  ProjectExporter.cpp  ProjectExporter.h  ProjectExporter_Unix_MacOS.cbp  ProjectExporter_Windows_MSYS2.cbp  ProjectExporter_unix.cbp  ProjectExporter_unix_wx30.cbp  README.md  Readme_Project_Exporter.md  manifest.rc  manifest.xml
Exporter_AutoTools/: AutotoolsExporter.cpp  AutotoolsExporter.h
Exporter_BakeFile/: BakefileExporter.cpp  BakefileExporter.h
Exporter_CMake/: CMakeListsExporter.cpp  CMakeListsExporter.h
Exporter_PreMake4/: Premake4Dlg.cpp  Premake4Dlg.h  Premake4Dlg.xrc  Premake4Exporter.cpp  Premake4Exporter.h
Exporter_PreMake5/: PM5SettingsDialog.cpp  PM5SettingsDialog.h  manifest.xml  pm_base.cpp  pm_base.h  pm_config.cpp  pm_config.h  pm_config_cb.cpp  pm_config_cb.h  pm_defaults.cpp  pm_defaults.h  pm_file.cpp  pm_file.h  pm_file_cb.cpp  pm_file_cb.h  pm_project.cpp  pm_project.h  pm_project_cb.cpp  pm_project_cb.h  pm_regex.cpp  pm_regex.h  pm_settings.cpp  pm_settings.h  pm_utils.cpp  pm_utils.h  pm_workspace.cpp  pm_workspace.h  pm_workspace_cb.cpp  pm_workspace_cb.h  premake5cb.cbp  premake5cb.cpp  premake5cb.h
Exporter_PreMake5/wxsmith/: PM5SettingsDialog.wxs
wxsmith/: PremakeDlg.wxs
